SpringSecurity脚手架搭建成功 还有很多需要扩展东西 如Session管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,14 @@ server.tomcat.uri-encoding=UTF-8
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
 
-# 视图
-spring.mvc.view.prefix=/
-spring.mvc.view.suffix=.html
+# mvc视图   由于引入了SpringSecurity   需要重新再代码配置
+#spring.mvc.view.prefix=/static/
+#spring.mvc.view.suffix=.html
 
 
-# 静态资源文件
-spring.mvc.static-path-pattern=/**
-spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/
+# mvc静态资源文件  由于引入了SpringSecurity   需要重新再代码配置
+#spring.mvc.static-path-pattern=/static/**
+#spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/
 
 
 # 驼峰转换
