--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.6.RELEASE'
+        springBootVersion = '2.1.7.RELEASE'
     }
     repositories {
         mavenLocal()
@@ -34,8 +34,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-configuration-processor')
-    //implementation('org.springframework.boot:spring-boot-starter-security')
-    //implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 
     implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0')
     implementation('mysql:mysql-connector-java:5.1.34')
