--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.port=8090
 
-spring.datasource.url=jdbc:mysql://39.108.173.253:3306/test?useUnicode=true&amp;characterEncoding=utf-8
-spring.datasource.username=waimai
-spring.datasource.password=8sIOD14S
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initial-size=10
 spring.datasource.min-idle=10
